--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.16.2",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
     "lodash": "^4.17.5",
+    "mongoose": "^7.2.0",
     "nodemon": "^2.0.22"
   }
 }
