--- a/stand_alone-graphQl-react-marn/marn/apollo-server/package.json
+++ b/stand_alone-graphQl-react-marn/marn/apollo-server/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@apollo/client": "^3.7.3",
     "@apollo/server": "^4.3.0",
+    "babel-plugin-dotenv": "^0.1.1",
+    "dotenv": "16.0.3",
     "graphql": "^16.6.0",
     "mongoose": "^6.8.1",
-    "dotenv": "16.0.3"
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
